fixed overflow; high quality images; un-italicized caption

--- a/docs/styles/themes.css
+++ b/docs/styles/themes.css
@@ -6,6 +6,7 @@
 
 .page {
   position: relative;
+  overflow: hidden;
 }
 
 body,
@@ -31,30 +32,18 @@ body,
   font-size: 36px;
   z-index: 9;
   mix-blend-mode: overlay;
-  text-shadow: 8px 8px 10px black;
+  text-shadow: -8px 8px 10px black;
 }
 
 .banner {
   width: 100%;
-  height: 350px;
+  height: 30%;
   background: linear-gradient(45deg, #2F1C53, #A46DFF, #F6D1FD);
   position: absolute;
   top: 0;
   transform: skewY(-10deg);
   transform-origin: 0;
 }
-
-.banner2 {
-  width: 100%;
-  height: 150px;
-  background: linear-gradient(45deg, #2F1C53, #A46DFF, #F6D1FD);
-  position: absolute;
-  top: 0;
-  transform: skewY(10deg);
-  transform-origin: 0;
-  z-index: -1;
-}
-
 
 .main {
   margin-top: 5%;
@@ -67,7 +56,7 @@ body,
 }
 
 .rounded {
-  box-shadow: 4px 4px 10px black;
+  box-shadow: -4px 4px 10px black;
 }
 
 .team-name {
@@ -84,12 +73,19 @@ body,
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 768px) {
   .banner {
-    height: 650px;
+    height: 54.5%;
   }
 
   .banner2 {
-    height: 350px;
+    width: 100%;
+    height: 30%;
+    background: linear-gradient(45deg, #2F1C53, #A46DFF, #F6D1FD);
+    position: absolute;
+    top: 0;
+    transform: skewY(10deg);
+    transform-origin: 0;
+    z-index: -1;
   }
 }
